# gentwriter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gentwriter.code-workspace  justfile  pyproject.toml  requirements.txt
evals/: fmind_medium_com.evalset.json
gentwriter/: __init__.py  __main__.py  agent.py  configs.py  schemas.py  scripts.py  subagents.py  tools.py
tasks/: agent.just  doc.just  docker.just  package.just
tests/: test_schemas.py  test_scripts.py  test_tools.py
