# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "gentwriter"
version = "0.1.0"
description = "Write social network content like a true a-gent writer."
authors = [{ name = "fmind" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["agent", "adk", "writer"]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "google-adk>=0.2.0",
    "google-genai>=1.11.0",
    "hatchling>=1.27.0",
]

# LINKS

[project.urls]
Homepage = "https://github.com/fmind/gentwriter"
Documentation = "https://fmind.github.io/gentwriter/"
Repository = "https://github.com/fmind/gentwriter"
"Bug Tracker" = "https://github.com/fmind/gentwriter/issues"

# SCRIPTS

[project.scripts]
gentwriter = "gentwriter.scripts:main"

# DEPENDENCIES

[dependency-groups]
check = [
    "bandit>=1.8.3",
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
]
commit = ["commitizen>=4.4.1", "pre-commit>=4.1.0"]
dev = ["rust-just>=1.39.0"]
doc = ["pdoc>=15.0.1"]
notebook = ["ipykernel>=6.29.5", "nbformat>=5.10.4"]

# TOOLS

[tool.uv]
default-groups = ["check", "commit", "dev", "doc", "notebook"]

[tool.bandit]
targets = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

[tool.uv.build-backend]
module-root = ""

# SYSTEMS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
